--- a/package.json
+++ b/package.json
@@ -16,19 +16,7 @@
     "autoprefixer": "^9.8.6",
     "npm-run-all": "^4.1.5",
     "parcel-bundler": "^1.12.4",
-    "postcss": "^8.2.9",
-    "postcss-modules": "^3.2.2",
     "rimraf": "^2.7.1"
   },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {
-        "overrideBrowserslist": [
-          "> 1%",
-          "last 4 versions",
-          "ie >= 9"
-        ]
-      }
-    }
-  }
+  "postcss": {}
 }
