--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "^9.8.6",
     "npm-run-all": "^4.1.5",
     "parcel-bundler": "^1.12.4",
+    "parcel-plugin-imagemin": "^4.0.2",
     "rimraf": "^2.7.1"
   },
   "postcss": {}
